--- a/resumestudio.html
+++ b/resumestudio.html
@@ -13,18 +13,18 @@
  <div class='menu'>
  <nav>
  <ul>
- <li>Home</li>
-  <li>About</li>
-   <li>Education</li>
-   <li>skills</li>
-    <li>Hobbies</li> 
- <li>contact</li>
- 
+ <li><a href='#home'>Home</a></li>
+  <li><a href='#about'>About</a></li>
+   <li><a href='#education'>Education</a></li>
+   <li><a href='#skills'>skills</a></li>
+    <li><a href='#hobbies'>Hobbies</a></li> 
+ <li><a href='#contact'>contact</a></li>
+
  </ul>
 </nav>
  </div>
  
- <div class='home'>
+ <div class='home' id='home'>
  
     <div class='content'>
          <div class='profile'><i class='fas fa-user-circle'></i></div>
@@ -33,42 +33,42 @@
  
  </div>
  
- <div class='about'>
+ <div class='about' id='about'>
 <div class='inner'>
- About
+<span class='abouttext'> About</span>
  <p>hi how are u iam fine and hpe hw  skhdg dfhdfuc hdfgiuhfpiFJ KWUFFHUCADKWEF EHFHSUKFH hdgdfeyff</p>
 </div>
  </div>
- <div class='education'>
+ <div class='education' id='education'>
  <div class='head'>Education</div>
  <div class='educationblock'>
- <div><i class='fas fa-user-graduate'></i><br>kits warangal</div>
- <div><i class='fas fa-graduation-cap'></i><br>narayana junior college</div>
- <div><i class='fas fa-school'></i><br>sri sai ram</div>
+ <div><i class='fas fa-user-graduate'></i><br>kits  warangal<br>2022</div>
+ <div><i class='fas fa-graduation-cap'></i><br>narayana college<br>2018</div>
+ <div><i class='fas fa-school'></i><br>sai ram vidhyalaya<br>2016</div>
  </div>
  
  </div>
- <div class='skills'>
- <div>Skills</div>
- <br><br>
+ <div class='skills'id='skills'>
+ <div class='skilltop'>Skills</div>
+ 
  <div class='skillblock'>
- <div>c<br>java<br>python</div>
- <div>data<br>php<br>js </div>
- <div>httml<br>css<br>jsp<br> </div>
+ <div>C language<br>Java<br>Python</div>
+ <div>Data Structures<br>PHP<br>SQL</div>
+ <div>HTML<br>CSS<br>Java Script<br> </div>
  </div>
  </div>
  
- <div class='hobbies'>
- <div class='head'>hobbies</div>
+ <div class='hobbies' id='hobbies'>
+ <div class='head'>Hobbies</div>
  <div class='hobbieblock'>
- <div><i class='fas fa-table-tennis'></i><br>playing table tennis</div>
- <div><i class='fab fa-hackerrank'></i><br>hacker rank</div>
- <div><i class='fas fa-headphones-alt'></i><br>listening music</div>
+ <div><i class='fas fa-table-tennis'></i><br>playing <br>table tennis</div>
+ <div><i class='fab fa-hackerrank'></i><br>solving problems<br> in hacker rank</div>
+ <div><i class='fas fa-headphones-alt'></i><br>listening <br>melody music</div>
  </div>
  </div>
  
  
- <div class='contact'>
+ <div class='contact' id='contact'>
  <div class='size'>contact</div>
  <br>
  <p>EMAIL:gmail.com</p>
